[gd_scene load_steps=6 format=3 uid="uid://dmb0k4rdw2p8y"]

[ext_resource type="Script" uid="uid://dxhu5nelvwnts" path="res://Scripts/UI/Controls/CloudControl.gd" id="1_ha15r"]
[ext_resource type="Texture2D" uid="uid://bwn1v2wcbaegc" path="res://assets/icons/resizer_se.svg" id="2_jl5my"]
[ext_resource type="Texture2D" uid="uid://bfbaum4y6o8qn" path="res://assets/icons/resizer_nw.svg" id="3_xkjvb"]
[ext_resource type="Script" uid="uid://ca3xmx8l0ge7x" path="res://Scripts/UI/Controls/BezierCurve.gd" id="4_63mbq"]
[ext_resource type="Texture2D" uid="uid://b25k6drncexmw" path="res://assets/icons/hand_mover.png" id="5_al3dx"]

[node name="CloudControl" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 1
color = Color(1, 0.603922, 1, 0.211765)
script = ExtResource("1_ha15r")

[node name="BezierCurve" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_63mbq")
allow_gui_add = false

[node name="LowerBottomResizer" type="TextureButton" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 1100.0
offset_top = 602.0
offset_right = 1135.0
offset_bottom = 637.0
pivot_offset = Vector2(17, 17)
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 12
texture_normal = ExtResource("2_jl5my")
stretch_mode = 5

[node name="UpperLeftResizer" type="TextureButton" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 740.0
offset_top = 419.0
offset_right = 775.0
offset_bottom = 454.0
pivot_offset = Vector2(17, 17)
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 12
texture_normal = ExtResource("3_xkjvb")
stretch_mode = 5

[node name="Mover" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 772.0
offset_top = 419.0
offset_right = 807.0
offset_bottom = 454.0
pivot_offset = Vector2(17, 17)
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 6
texture_normal = ExtResource("5_al3dx")
stretch_mode = 5

[node name="TextEdit" type="TextEdit" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_type_variation = &"SpeechBubbleTextEdit"
wrap_mode = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_down" from="LowerBottomResizer" to="." method="_on_lower_bottom_resizer_button_down"]
[connection signal="button_down" from="UpperLeftResizer" to="." method="_on_upper_left_resizer_button_down"]
[connection signal="button_down" from="Mover" to="." method="_on_mover_button_down"]
